proofreading till page 31

--- a/refs.bib
+++ b/refs.bib
@@ -126,3 +126,12 @@
   year      = {1966},
   publisher = {JSTOR}
 }
+@BOOK{dugundji,
+  title     = "Topology",
+  author    = "Dugundji, James",
+  publisher = "Allyn and Bacon",
+  pages     = "xvi, 447 pages ; 24 cm",
+  series    = "Allyn and Bacon series in advanced mathematics",
+  year      =  1966,
+  address   = "Boston"
+}
