--- a/src/sections/germ/section.tex
+++ b/src/sections/germ/section.tex
@@ -1,4 +1,4 @@
-\subsection*{Map-Germs}\label{section::germs}{\blankbreak}
+\subsection*{Map-Germs}\label{section::germs}
 \input{src/sections/germ/parts/germ}
 \input{src/sections/germ/parts/isomorphism}
 \input{src/sections/germ/parts/bundle}
