--- a/src/sections/homotopy/section.tex
+++ b/src/sections/homotopy/section.tex
@@ -1,4 +1,4 @@
-\subsection*{Proving the Homotopy Theorem}\label{section::homotopy_prove}{\blankbreak}
+\subsection*{Proving the Homotopy Theorem}\label{section::homotopy_prove}
 \input{src/sections/homotopy/parts/glueing}
 \input{src/sections/homotopy/parts/lemma1}
 \input{src/sections/homotopy/parts/lemma2}
