--- a/src/sections/rooted/parts/induced.tex
+++ b/src/sections/rooted/parts/induced.tex
@@ -1,6 +1,6 @@
 % definition
 \begin{mystatement}{definition}{suspension::induced}[57]
-    Let $\bb$ be a rooted microbundle over $B$ and $f: A \to B$ a based map.
+    Let $\bb$ be a rooted microbundle over $B$ and let $f: A \to B$ be a based map.
     We equip the induced microbundle $\ind{f}\bb$ with the rooting
     \[
         \germdef{R_f}{E(\ind{f}\bb[a_0])
@@ -12,9 +12,9 @@
 
 % afterword
 \begin{myparagraph}
-    The total space $E(\ind{f}\bb[a_0])$ is the same as $a_0 \cross E(\bbb)$, because
+    The total space $E(\ind{f}\bb[a_0])$ is the same as $a_0 \cross E(\bbb)$ because
     \[ E(\ind{f}\bb[a_0]) = \set{(a, e) \in A \cross E(\bb)}{a = a_0 \tand f(a) = b_0 = j(e)} \]
     \[ = a_0 \cross \set{e \in E(\bb)}{j(e) = b_0} = a_0 \cross E(\bbb). \]
     % intentionally empty
-    
+
 \end{myparagraph}
