--- a/src/sections/rooted/parts/rooted.tex
+++ b/src/sections/rooted/parts/rooted.tex
@@ -5,7 +5,7 @@
     over $B$ together with an isomorphism-germ
     \[ \germdef{R}{\bbb}{\be{b_0}}. \]
     % isomorphy
-    Two rooted microbundles $\bb$ and $\bb'$ are \defterm{rooted isomorphic}
+    Two rooted microbundles $\bb$ and $\bb'$ over $B$ are \defterm{rooted isomorphic}
     if there exists an isomorphism-germ $\germ{\bb}{\bb'}$ extending
     \[ \germdef{\inv{R'} \circ R}{\bbb}{\bb'\restr{b_0}}. \]
 \end{mystatement}
