--- a/src/sections/rooted/section.tex
+++ b/src/sections/rooted/section.tex
@@ -1,4 +1,4 @@
-\subsection*{Rooted Microbundles}\label{section::rooted}{\blankbreak}
+\subsection*{Rooted Microbundles}\label{section::rooted}
 \input{src/sections/rooted/parts/rooted}
 \input{src/sections/rooted/parts/induced}
 \input{src/sections/rooted/parts/homotopy}
