--- a/src/sections/whitney/parts/trivialize.tex
+++ b/src/sections/whitney/parts/trivialize.tex
@@ -64,9 +64,9 @@
 
         Now we extend $\nu$ over $B$ by taking all extensions of $\nu$
         over every simplex
-        using (Step 1), and glueing its total spaces together along $E(\nu)$.
-        Similarly, the injection and projection can be obtained
-        by glueing the injection and projection maps over every simplex together.
+        using (Step 1), and identifying its total spaces together along $E(\nu)$.
+        Similarly, injection and projection are obtained
+        by piecing the injection and projection maps of the individual extensions together.
 
         We denote the resulting microbundle by $\eta$.
 
