--- a/src/sections/homotopy/parts/lemma2.tex
+++ b/src/sections/homotopy/parts/lemma2.tex
@@ -11,16 +11,18 @@
     For every $t \in \I$, assume a neighborhood
     $U_t = V_t \cross (t - \eps_t, t + \eps_t)$ of $(b, t)$
     such that $\bb[U_t]$ is trivial.
-    Such a $U_t$ can be constructed by taking
+    Such a neighborhood can be constructed by taking
     a local trivialization $(U', V', \phi')$ of $(b, t)$ in $\bb$
     and restricting $U'$ accordingly.
 
-    Since $\cyl{\coll{b}}$ is compact, we can choose a finitely many
-    \[ (V_1 \cross (t_1 - \eps_1, t_1 + \eps_1)), \dots, (V_n \cross (t_n - \eps_n, t_n + \eps_n)) \]
-    of the collection $\{U_t\}$ covering $\{b\} \cross \I$ and define $V = V_1 \cap \dots \cap V_n$.
+    Since $\cyl{\coll{b}}$ is compact, we can choose finitely many
+    \[ V_1 \cross (t_1 - \eps_1, t_1 + \eps_1), \dots, V_n \cross (t_n - \eps_n, t_n + \eps_n) \]
+    covering $\{b\} \cross \I$ and define $V = V_1 \cap \dots \cap V_n$.
 
-    The restricted microbundles $\bb[V \cross (t_i - \eps_i, t_i + \eps_i)]$ are trivial, because every $\bb[U_t]$ is trivial and $V \cross (t_i - \eps_i, t_i + \eps_i) \sub U_t$.
-    Hence, there exists a subdivision $0 = t_0 < \cdots < t_k = 1$ such that every $\bb[V \cross [t_{i}, t_{i + 1}]]$ is trivial.
+    The restricted microbundles $\bb[V \cross (t_i - \eps_i, t_i + \eps_i)]$ are trivial
+    as every $\bb[U_t]$ is trivial and $V \cross (t_i - \eps_i, t_i + \eps_i) \sub U_t$.
+    It follows that there exists a subdivision $0 = t_0 < \cdots < t_k = 1$ such that every $\bb[V \cross [t_{i}, t_{i + 1}]]$ is trivial.
     
-    By iteratively applying the previous lemma on the $\bb[V \cross [t_i, t_{i + 1}]]$, it follows that $\bb[\cyl{V}]$ is trivial.
+    By iteratively applying the previous lemma on the $\bb[V \cross [t_i, t_{i + 1}]]$,
+    we conclude that $\bb[\cyl{V}]$ is trivial.
 \end{myproof}
