--- a/src/sections/homotopy/parts/paracompact.tex
+++ b/src/sections/homotopy/parts/paracompact.tex
@@ -1,6 +1,6 @@
 % lemma
 \begin{mystatement}{lemma}{homotopy::paracompact}
-    Let $B$ be a paracompact hausdorff space and let $\coll{V_\alpha}$
+    Let $B$ be a paracompact space and let $\coll{V_\alpha}$
     be a locally finite open cover of $B$.
     Then there exists a locally finite closed cover $\coll{\overline{B_\beta}}$ of $B$
     such that every $\overline{B_\beta}$ intersects with only
@@ -10,16 +10,16 @@
 % proof
 \begin{myproof}
     For every $b \in B$, there exists an open neighborhood $U_b$ of $b$
-    that intersects only with finitely many
-    \[ V_{\alpha_1}, \dots V_{\alpha_k} \]
-    using the definition of local finiteness for $\coll{V_\alpha}$.
+    that intersects with only finitely many
+    $V_{\alpha_1}, \dots V_{\alpha_k}$
+    due to local finiteness of $\coll{V_\alpha}$.
     Clearly, the collection $\coll{U_b}$ over all $b \in B$ covers $B$.
 
     Since $B$ is paracompact, there exists a locally finite subcover $\coll{B_\beta}$.
 
-    The collection $\coll{\overline{B_\beta}}$ meets our requirements, because
-    \begin{enumerate}
-        \item $\coll{\overline{B_\beta}}$ is locally finite:
+    The collection $\coll{\overline{B_\beta}}$ then meets our requirements:
+    \begin{sectionize}
+        \item $\coll{\overline{B_\beta}}$ is locally finite
         
         For an arbitrary $b \in B$, let $W_b$
         be an open neighborhood of $b$ that
@@ -32,12 +32,12 @@
         \[ \implies W_b \cap \overline{B_\beta} = \emptyset. \]
 
         \item Every $\overline{B_\beta}$ intersects
-        only finitely many $V_{\alpha_1}, \dots V_{\alpha_k}$:
+        only finitely many $V_{\alpha_1}, \dots V_{\alpha_k}$
         
         Since $B_\beta \sub U_b$ for some $b \in B$, $B_\beta$
-        intersects only finitely many $V_\alpha$.
-        Using the same argument as in (1.),
+        intersects only finitely many $V_{\alpha_1}, \dots V_{\alpha_k}$.
+        By applying the same reasoning as in (1),
         it follows that $\overline{B_\beta}$ intersects
-        with the exact same $V_\alpha$.
-    \end{enumerate}
+        with the same $V_{\alpha_1}, \dots V_{\alpha_k}$.
+    \end{sectionize}
 \end{myproof}
