--- a/src/sections/homotopy/parts/theorem.tex
+++ b/src/sections/homotopy/parts/theorem.tex
@@ -5,23 +5,23 @@
 
 % proof
 \begin{myproof}[of the Homotopy Theorem]
-    The previous lemma states that there exists a bundle-germ
+    The previous lemma yields a bundle-germ
     \[ \germdef{R}{\ind{H}\bb}{\ind{H}\bb[\cylup{A}]} \]
     covering the retraction $(a, t) \mapsto (a, 1)$.
 
-    By restricting $R$ to $\ind{H}\bb[\cyldown{A}]$ we obtain a bundle-germ
+    By restricting $R$ to $\ind{H}\bb[\cyldown{A}]$, we obtain a bundle-germ
     \[ \germ{\ind{H}\bb[\cyldown{A}]}{\ind{H}\bb[\cylup{A}]} \]
     covering $\theta: \cyldown{A} \isomto \cylup{A}$ with $\theta(a, 0) = (a, 1)$.
-    Applying \myintref{homotopy::corollary} yields
+    \myintref{homotopy::corollary} then infers that
     $\ind{H}\bb[\cyldown{A}] \cong \ind{\theta}(\ind{H}\bb[\cylup{A}])$.
-
+    
     Considering $\cyldown{A} = A$,
-    we can identify $\ind{H}\bb[\cyldown{A}]$ with $\ind{f}\bb$ as follows
+    we can identify $\ind{H}\bb[\cyldown{A}]$ with $\ind{f}\bb$ as follows:
     \[
         \ind{H}\bb[A \cross \{0\}] =
         \ind{\iota}(\ind{H}\bb) \cong
         \ind{(H \circ \iota)}\bb =
-        \ind{f}\bb.
+        \ind{f}\bb
     \]
     Analogously, we can identify
     $\ind{\theta}(\ind{H}\bb[\cylup{A}])$ with $\ind{g}\bb$.
