--- a/thesis.tex
+++ b/thesis.tex
@@ -57,14 +57,14 @@
 % Docuemnt :: Suspension
 \section{Rooted Microbundles and Suspensions}\label{chapter::suspension}
 \begin{myparagraph}
-    In the following,
-    we provide a proof for the Bouquet Lemma presented in \myintref{section::whitney}.
+    In this section,
+    we provide a proof for the Bouquet Lemma stated in \myintref{section::whitney}.
     To this end, we introduce the concept of `rooted microbundles',
     which allows us to define the wedge sum of two microbundles in a precise manner.
     Additionally, we show a version of the Homotopy Theorem
     that is compatible with rooted-microbundles.
 
-    In this section,
+    Throughout this section,
     we assume that every topological space is equipped with an arbitrary base point
     which we will denote with subscript $0$.
 \end{myparagraph}
