--- a/src/packages.tex
+++ b/src/packages.tex
@@ -65,3 +65,7 @@
 % \makeatletter
 % \renewcommand\subsection{\@startsection{subsection}{2}\z@{.5\linespacing\@plus.7\linespacing}{-.5em}{\normalfont\scshape}}
 % \makeatother
+% \usepackage{titlesec}
+% \makeatletter
+% \titleformat{\section}{\LARGE\normalfont\bfseries\scshape}{\thesection}{1em}{}
+% \makeatother
