--- a/src/sections/microbundle/parts/totalspace.tex
+++ b/src/sections/microbundle/parts/totalspace.tex
@@ -43,7 +43,7 @@
         Since $E'$ is a subset of $E$,
         we can simply use the identity $E' \to E' \sub E$
         as our homeomorphism between neighborhoods of $i(B)$.
-        Furthermore, the injection and projection maps for $\bb$ and $\bb'$ are the same,
+        Furthermore, the injection and projection maps of $\bb$ and $\bb'$ are the same,
         so they clearly commute with the identity.
     \end{steps}
     This completes the proof.
