--- a/src/sections/rooted/parts/homotopy.tex
+++ b/src/sections/rooted/parts/homotopy.tex
@@ -60,7 +60,7 @@
     Similar to the construction of $\overline{R}$, we can construct an isomorphism-germ
     \[ \germdef{P}{\be{\cyl{V}}}{\be{\cyl{V}}} \]
     extending $Q \circ \inv{\overline{R}}$ represented by
-    \[ p(a, t, x) = (a, f(a_0, t, x)) \]
+    \[ (a, t, x) \mapsto (a, f(a_0, t, x)) \]
     considering $f(a_0, t, x) \in \I \cross \R^n$.
 
     Restricted to $\be{\cyl{a_0}}$, $P$ agrees with $Q \circ \inv{\overline{R}}$ and thus
@@ -113,7 +113,7 @@
     Since $a_0 \in V$, the resulting collection is still a
     locally finite open cover of $A$.
     
-    In the following, we will denote constructions over $V$
+    In the following, we denote constructions over $V$
     with subscript $V$ and constructions over the other sets
     from the cover with subscript $\alpha$.
 
@@ -141,6 +141,6 @@
 
     It follows that, by piecing together the $R_\alpha$ and $R_V$ like in \myintref{homotopy::lemma3},
     we obtain a bundle germ $\germdef{F}{\ind{H}\bb}{\ind{H}\bb[\cylup{A}]}$
-    that extends $\inv{R_g} \circ R_f$.
+    extending $\inv{R_g} \circ R_f$.
     This completes the proof.
 \end{myproof}
