--- a/src/sections/suspension/parts/paracompact.tex
+++ b/src/sections/suspension/parts/paracompact.tex
@@ -3,7 +3,7 @@
     Let $\bb$ be a rooted microbundle over a paracompact hausdorff space $B$.
     Then there exists a closed neighborhood $W$ of $b_0$ and an isomorphism-germ
     \[ \germ{\bb[W]}{\be{W}} \]
-    extending $R$ together with a map $\lambda: B \to [0, 1]$ with
+    extending $R$ (rooting of $\bb$) together with a map $\lambda: B \to [0, 1]$ with
     \[ \supp{\lambda} \sub W \tand \lambda(b_0) = 1. \]
 \end{mystatement}
 
@@ -14,14 +14,12 @@
     Choose a local trivialization $(U, V, \phi)$ for $b_0$ such that $V \cap E(\bbb) \sub V_r$.
     Such a trivialization can be obtained by subtracting the closed set
     $E(\bbb) - V_r$ from $E(\bb)$ if necessary
-    and considering the resulting microbundle instead.
+    and choosing a local trivialization for $b_0$ in the resulting microbundle instead.
     
-    Consider the (locally) finite open covering of $B$ given by $U$ and $B - \{b_0\}$.
-    Since $B$ is paracompact, we can apply the concept
+    Consider the (locally) finite open cover of $B$ given by $U$ and $B - \{b_0\}$.
+    Since $B$ is paracompact, we can apply the theory
     of partitions of unity which yields a map
-    \[ \lambda: B \to [0, 1] \twith \supp{\lambda} \sub U. \]
-    By rescaling and capping to $1$ if necessary,
-    we may assume that $\lambda(b_0) = 1$.
+    $\lambda: B \to [0, 1] \twith \supp{\lambda} \sub U$ and $\lambda(b_0) = 1$.
 
     We choose $W = \supp{\lambda} \sub U$,
     which is closed by the definition of the support.
