--- a/src/sections/suspension/parts/reflection.tex
+++ b/src/sections/suspension/parts/reflection.tex
@@ -17,8 +17,11 @@
     The composition $c \circ \phi$ is null-homotopic via
     the homotopy $H: B \cross \I \to B$ given by
     \[ H([x, t], s) = f(\phi(x, t \cdot s)). \]
-    Therefore, $\ind{\phi}(\ind{c}\bb) \cong \ind{(c \circ \phi)}\bb \cong \ind{c_{B, b_0}}\bb \cong \be{B}$
-    as rooted-isomorphy (see \myintref{homotopy::theorem}).
+    Applying \myintref{homotopy::theorem} yields
+    $\ind{\phi}(\ind{c}\bb) \cong \ind{(c \circ \phi)}\bb \cong \ind{c_{B, b_0}}\bb \cong \be{B}$
+    as rooted-isomorphy.
+    Note that the induced microbundle preserves rootings
+    (see \myintref{suspension::induced}).
     By applying the previous lemma,
     it follows that
     \[ \ind{\phi}(\bb \vee \ind{r}\bb) = \ind{\phi}(\ind{(id \cup r)}(\bb \vee \bb)) = \ind{\phi}(\ind{c}\bb) \]
