--- a/src/sections/suspension/parts/suspension.tex
+++ b/src/sections/suspension/parts/suspension.tex
@@ -4,9 +4,8 @@
     \[ SX = (\cyl{X}) / (X \cross \coll{0, 1} \cup \cyl{x_0})\]
     over a topological space $X$.
 
-    Let $\phi: B \to B \vee B$ denote the map that sends
-    $X \cross [0, \half]$ to the first $B$ via
-    \[ \phi([x, t]) = \case{[x, 2t]}{[x, 2t - 1]}{t \le \half}. \]
+    Let $\phi: B \to B \vee B$ denote the `duplicate' map given by
+    \[ \phi([x, t]) = \case{([x, 2t], 1)}{([x, 2t - 1], 2)}{t \le \half}. \]
 
     Additionally, let $c_1: B \vee B \to B$ denote the map
     that is the identity on the first summand
