--- a/src/sections/suspension/parts/distributivity.tex
+++ b/src/sections/suspension/parts/distributivity.tex
@@ -14,7 +14,7 @@
         E(\ind{(f \cup g)}(\ba \vee \bb)) \\
         = \set{(x, e) \in (A' \vee B') \cross E(\ba \vee \bb)}{(f \cup g)(x) = j(e)} \\
         = \set{(x, e) \in ((A' \cross E(\ba)) \sqcup (B' \cross E(\bb)) / \sim)}{(f \cup g)(x) = j(e)} \\
-        = (\set{(x, e) \in A' \cross E(\ba)}{f(x) = j_a(e)} \sqcup \set{(x, e) \in B' \cross E(\bb)}{g(x) = j_b(e)}) / \sim \\
+        = (\set{(x, e) \in A' \cross E(\ba)}{f(x) = j_a(e)} \sqcup \set{(x, e) \in B' \cross E(\bb)}{g(x) = j_b(e)}) / \sim\\
         = (E(\ind{f}\ba) \sqcup E(\ind{g}\bb) / \sim)
         = E(\ind{f}\ba \vee \ind{g}\bb)
     \end{gather*}
@@ -22,7 +22,7 @@
 
     % injection and projection
     Furthermore, the injection and projection maps agree.
-    To check this, consider the following equations:
+    This can be seen with the following equations:
     \begin{gather}
         i_{\cup}(a) = i_f(a) = i_{\vee}(a) \tand i_{\cup}(b) = i_g(b) = i_{\vee}(b)\\
         j_{\cup}(a, e) = a = j_f(a, e) = i_{\vee}(a, e) \tand j_{\cup}(b, e) = b = j_g(b, e) = i_{\vee}(b, e)
