--- a/src/sections/suspension/parts/triviality.tex
+++ b/src/sections/suspension/parts/triviality.tex
@@ -20,16 +20,15 @@
 
         % homeomorphy
         Consider $\psi: E(\ind{c_1}\bb) \isomto E(\bb \vee \be{B})$ given by
-        \[ \psi((b, i), e) = \case{e}{(b, \snd{f}(e))}{i = 1} \]
+        \[ \psi((b, i), e) = \case{e}{(b, \snd{f}(e))}{i = 1}. \]
         Note that $\psi$ is well-defined, because
         \[ \psi((b_0, 1), e) = e = f(e) = (b_0, \snd{f}(e)) = \psi((b_0, 2), e). \]
-
-        Additionally, $\psi$ is a homeomorphism as both of its summands are homeomorphisms.
+        Furthemore, $\psi$ is a homeomorphism as both of its summands are homeomorphisms.
 
         % commutativity
-        Finally, it remains to be shown that $\psi$
+        It remains to be shown that $\psi$
         commutes with the injection and projection maps of $\ind{c_1}\bb$ and $\bb \vee \be{B}$.
-        To check this, consider the following equations:
+        This can be seen with the following equations:
         \begin{align}
             &\psi(i_{c_1}(b, i)) = \casenif{\psi((b, 1), i(b)) = i(b) = i_\vee(b, 1)}{\psi((b, 2), i(b_0)) = f(i(b)) = (b, 0) = (id \cross 0)(b) = i_\vee(b, 2)} \\
             &j_{c_1}((b, i), e) = \casenif{j(e) = j_\vee(e) = j_\vee(\psi((b, 1), e))}{(b, 2) = \pi_1(\psi((b, 2), e)) = j_\vee(\psi((b, 2), e))}
@@ -41,6 +40,6 @@
         Using the fact that $c_1 \circ \phi = id_{B \vee B}$, we conclude that
         \[ \ind{\phi}(\bb \vee \be{B}) \cong \ind{\phi}(\ind{c_1}\bb) \cong \ind{(c_1 \circ \phi)}\bb \cong \bb. \]
         For reasons of symmetry, it follows that $\bb \cong \ind{\phi}(\be{B} \vee \bb)$.
-        This completes the proof.
     \end{steps}
+    This completes the proof.
 \end{myproof}
