--- a/src/sections/suspension/parts/whitney.tex
+++ b/src/sections/suspension/parts/whitney.tex
@@ -2,7 +2,7 @@
 \begin{mystatement}{definition}{suspension::whitney}[70]
     Given two two rooted microbundles $\bb$ and $\bb'$ over $B$,
     we equip the Whitney sum $\whitney{\bb}{\bb'}$ with the rooting
-    \[ \germdef{\whitney{R}{R'}}{(\whitney{\bb}{\bb'})\restr{b_0}}{\whitney{\be[n_1]{b_0}}{\be[n_2]{b_0}} = \be[n_1 + n_1]{b_0}}. \]
+    \[ \germdef{\whitney{R}{R'}}{(\whitney{\bb}{\bb'})\restr{b_0}}{\whitney{\be[n_1]{b_0}}{\be[n_2]{b_0}} = \be[n_1 + n_1]{b_0}} \]
     represented by the direct sum of two representatives for $R$ and $R'$.
 \end{mystatement}
 
@@ -19,7 +19,7 @@
     % homeomorphy
     Consider $\psi: E(\whitney{(\ba \vee \bb)}{(\ba' \vee \bb')}) \isomto E((\whitney{\ba}{\ba'}) \vee (\whitney{\bb}{\bb'}))$
     given by the identity map.
-    Note that $\psi$ is well-defined, because
+    Note that $\psi$ is well-defined because
     \[ (e, e') \in E(\whitney{(\ba \vee \bb)}{(\ba' \vee \bb')}) \]
     \[ \implies j(e) = j'(e') \implies j(e), j'(e') \in A \tor j(e), j'(e') \in B\]
     \[ \implies (e, e') \in E(\whitney{\ba}{\ba'}) \tor (e, e') \in E(\whitney{\bb}{\bb'}) \]
@@ -27,7 +27,7 @@
 
     % injection and projection
     Furthermore, the injection and projection maps agree.
-    To check this, consider the following equations (symmetrical for $B$):
+    This can be seen with the following equations (symmetrical for $B$):
     \begin{gather}
         i_\oplus(a) = (i_a(a), i_a'(a)) = i_\vee(a) \\
         j_\oplus(e_a, e_a') = j(e_a) = j_a(e_a) =  j_\vee(e_a, e_a')
